--- a/src/styles/views/UserDetails.scss
+++ b/src/styles/views/UserDetails.scss
@@ -40,7 +40,7 @@
     border-radius: $borderRadius;
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     background: lighten($background, 5);
   }
   &.name {
