--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -8,10 +8,10 @@
    feel free to play around with these and see what other look you can come up with! :D
 */
 
-$accent: #97ABFF;
-$accentDark: #123597;
-$textColor: white;
-$background: #262632;
+$accent: #ebe8e5;
+$accentDark: #ebe8e5;
+$textColor: #201d18;
+$background: #ebe8e5;
 
 /* some constants */
 
