--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,7 @@ body {
   min-height: 100vh;
   font-family: $fontDefault;
   background-image: linear-gradient(135deg, $accent 10%, $accentDark 100%);
+  background-color: $background;
 }
 
 input,
