--- a/src/styles/views/Login.scss
+++ b/src/styles/views/Login.scss
@@ -20,7 +20,7 @@
     padding-left: 37px;
     padding-right: 37px;
     border-radius: 0.75em;
-    background-color: $background;
+    background-color: #bbd4ac;
     transition: opacity 0.5s ease, transform 0.5s ease;
     box-shadow: $dropShadow;
   }
@@ -37,10 +37,10 @@
     border-radius: 0.75em;
     margin-bottom: 20px;
     background: transparentize(white, 0.85);
-    color: $textColor;
+    color: #201d18;
   }
   &.label {
-    color: $textColor;
+    color: #201d18;
     margin-bottom: 10px;
     text-transform: lowercase;
     font-weight: 300;
@@ -49,5 +49,9 @@
     display: flex;
     justify-content: center;
     margin-top: 2em;
+
+    button {
+      color: #201d18; // dark brown
+    }
   }
 }
