--- a/src/styles/views/Register.scss
+++ b/src/styles/views/Register.scss
@@ -37,10 +37,10 @@
     border-radius: 0.75em;
     margin-bottom: 20px;
     background: transparentize(white, 0.85);
-    color: #201d18;
+    color: #765341;
   }
   &.label {
-    color: #201d18;
+    color: #765341;
     margin-bottom: 10px;
     text-transform: lowercase;
     font-weight: 300;
@@ -51,7 +51,7 @@
     margin-top: 2em;
 
     button {
-      color: #201d18; // dark brown
+      color: #765341; // dark brown
     }
   }
 }
