added page to create tasks, added the model for tasks (US3)

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -12,6 +12,9 @@ $accent: #ebe8e5;
 $accentDark: #ebe8e5;
 $textColor: #201d18;
 $background: #ebe8e5;
+$our_brown: #553842;
+$our_beige: #ebe8e5;
+$our_green: #bbd4ac;
 
 /* some constants */
 
