--- a/src/styles/views/Header.scss
+++ b/src/styles/views/Header.scss
@@ -6,7 +6,7 @@ html, body {
 }
 
 .header {
-  background-color: #bbd4ac; // green
+  background-color: $our_green;
   width: 100%;
 
   &.container {
@@ -18,7 +18,7 @@ html, body {
 
   &.title {
     font-weight: bold;
-    color: #765341;
+    color: $our_brown;
     text-align: center;
   }
 }
