--- a/src/styles/views/AddTasks.scss
+++ b/src/styles/views/AddTasks.scss
@@ -1,7 +1,8 @@
 @import "../theme";
 
-.register {
+.addtasks {
   &.container {
+    color: $our_brown;
     margin-top: 2em;
     min-height: 300px;
     /* we include the center mixin defined in _theme.scss and save three duplicate lines :) */
@@ -12,15 +13,15 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 60%;
+    width: 100%;
     max-width: 30em;
-    height: 30em;
+    height: 35em;
     font-size: 16px;
     font-weight: 300;
     padding-left: 37px;
     padding-right: 37px;
     border-radius: 0.75em;
-    background-color: $background;
+    background-color: $our_green;
     transition: opacity 0.5s ease, transform 0.5s ease;
     box-shadow: $dropShadow;
   }
@@ -37,17 +38,21 @@
     border-radius: 0.75em;
     margin-bottom: 20px;
     background: transparentize(white, 0.85);
-    color: $textColor;
+    color: $our_brown;
   }
   &.label {
-    color: $textColor;
+    color: $our_brown;
     margin-bottom: 6px;
-    text-transform: lowercase;
-    font-weight: 400;
+    text-transform: uppercase;
+    font-weight: 600;
   }
   &.button-container {
     display: flex;
     justify-content: center;
     margin-top: 2em;
+    button {
+      color: $our_beige;
+      background-color: $our_brown;
+    }
   }
 }
