--- a/src/styles/views/Login.scss
+++ b/src/styles/views/Login.scss
@@ -2,6 +2,7 @@
 
 .login {
   &.container {
+    color: $our_brown;
     margin-top: 2em;
     min-height: 300px;
     /* we include the center mixin defined in _theme.scss and save three duplicate lines :) */
@@ -14,13 +15,13 @@
     justify-content: center;
     width: 60%;
     max-width: 30em;
-    height: 30em;
+    height: 28em;
     font-size: 16px;
     font-weight: 300;
     padding-left: 37px;
     padding-right: 37px;
     border-radius: 0.75em;
-    background-color: #bbd4ac;
+    background-color: $our_green;
     transition: opacity 0.5s ease, transform 0.5s ease;
     box-shadow: $dropShadow;
   }
@@ -37,10 +38,10 @@
     border-radius: 0.75em;
     margin-bottom: 20px;
     background: transparentize(white, 0.85);
-    color: #201d18;
+    color: $our_brown;
   }
   &.label {
-    color: #201d18;
+    color: $our_brown;
     margin-bottom: 6px;
     text-transform: lowercase;
     font-weight: 400;
@@ -49,9 +50,9 @@
     display: flex;
     justify-content: center;
     margin-top: 2em;
-
     button {
-      color: #765341; // dark brown
+      color: $our_beige;
+      background-color: $our_brown;
     }
   }
 }
