--- a/src/styles/views/HomeFeed.scss
+++ b/src/styles/views/HomeFeed.scss
@@ -39,9 +39,13 @@
     box-shadow: $dropShadow;
   }
   &.field {
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row; 
+    justify-content: flex-start; 
+    align-items: center; 
   }
   &.creatorId,
   &.description,
@@ -62,6 +66,14 @@
     margin-bottom: 6px;
     text-transform: uppercase;
     font-weight: 600;
+  }
+  &.answer {
+    padding-left: 15px;
+    margin-left: 0px;
+    border: none;
+    border-radius: 0.75em;
+    margin-bottom: 6px;
+    color: $our_brown;
   }
   &.button-container {
     display: flex;
