--- a/src/styles/views/UserProfile.scss
+++ b/src/styles/views/UserProfile.scss
@@ -31,6 +31,22 @@
     justify-content: center;
     width: 100%;
     max-width: 30em;
+    height: 10em;
+    font-size: 16px;
+    font-weight: 300;
+    padding-left: 37px;
+    padding-right: 37px;
+    border-radius: 0.75em;
+    background-color: $our_green;
+    transition: opacity 0.5s ease, transform 0.5s ease;
+    box-shadow: $dropShadow;
+  }
+  .commentsform {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    max-width: 30em;
     height: 30em;
     font-size: 16px;
     font-weight: 300;
@@ -57,7 +73,17 @@
     margin-bottom: 20px;
     background: transparentize(white, 0.85);
     color: $our_brown;
-
+  }
+  .rating {
+    display: flex;
+    align-items: center;
+    height: 35px;
+    padding-left: 15px;
+    margin-left: -4px;
+    border: none;
+    border-radius: 0.75em;
+    margin-bottom: 20px;
+    color: $our_brown;
   }
   .label {
     color: $our_brown;
