--- a/src/styles/views/UserProfile.scss
+++ b/src/styles/views/UserProfile.scss
@@ -15,7 +15,7 @@
     justify-content: center;
     width: 100%;
     max-width: 30em;
-    height: 20em;
+    height: 12em;
     font-size: 16px;
     font-weight: 300;
     padding-left: 37px;
@@ -47,7 +47,7 @@
     justify-content: center;
     width: 100%;
     max-width: 30em;
-    height: 10em;
+    height: 25em;
     font-size: 16px;
     font-weight: 300;
     padding-left: 37px;
@@ -58,9 +58,14 @@
     box-shadow: $dropShadow;
   }
   &.field {
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row; 
+    // justify-content: space-between; 
+    justify-content: flex-start;
+    align-items: center; 
   }
   .input {
     display: flex;
@@ -71,7 +76,8 @@
     border: none;
     border-radius: 0.75em;
     margin-bottom: 20px;
-    background: transparentize(white, 0.85);
+    // background: transparentize(white, 0.85);
+    background: transparent; 
     color: $our_brown;
   }
   .rating {
@@ -87,9 +93,10 @@
   }
   .label {
     color: $our_brown;
-    margin-bottom: 6px;
+    // margin-bottom: 6px;
     text-transform: uppercase;
     font-weight: 600;
+    margin-right: 0.5em;
   }
   .button-container {
     display: flex;
