fixed styling a bit

--- a/src/styles/views/ToDo.scss
+++ b/src/styles/views/ToDo.scss
@@ -14,7 +14,10 @@
     justify-content: center;
     width: 60%;
     max-width: 30em;
-    height: 28em;
+    height: auto;
+    padding-top: 2em; 
+    padding-bottom: 2em; 
+    // min-height: 35em;
     font-size: 16px;
     font-weight: 300;
     padding-left: 37px;
@@ -39,6 +42,11 @@
     background: transparentize(white, 0.85);
     color: $our_brown;
   }
+  &.input-button-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
   &.label {
     color: $our_brown;
     margin-bottom: 6px;
@@ -48,7 +56,7 @@
   &.button-container {
     display: flex;
     justify-content: center;
-    margin-top: 2em;
+    margin-top: 0.2em;
 
     button {
       color: $our_beige;
