--- a/src/styles/views/MyApplications.scss
+++ b/src/styles/views/MyApplications.scss
@@ -45,6 +45,7 @@
   }
   &.left-wrapper {
     justify-content: left;
+    text-align: left;
   }
   &.right-wrapper {
     justify-content: right;
@@ -97,6 +98,7 @@
 
   //Regular button container
   &.button-container {
+    display: flex;
     justify-content: space-between;
     margin-top: 2em;
     button {
