--- a/src/styles/views/MyTasks.scss
+++ b/src/styles/views/MyTasks.scss
@@ -45,6 +45,7 @@
   }
   &.left-wrapper {
     justify-content: left;
+    text-align: left;
   }
   &.right-wrapper {
     justify-content: right;
@@ -95,49 +96,21 @@
     margin-top: 2em;
   }
 
-  //Regular button container
-  // &.button-container {
-  //   justify-content: space-between;
-  //   margin-top: 2em;
-  //   button {
-  //     color: $our_beige;
-  //     background-color: $our_brown;
-  //   }
-  // }
-
   &.button-container {
     display: flex;
-    justify-content: flex-end; // Align items to the end
+    justify-content: space-between;
     align-items: center;
     margin-top: 2em;
   }
-  
+
   & .button-replacement {
-    width: 30%;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     font-size: 16px;
     font-weight: 300;
     font-weight: 600;
-    // No marginLeft or marginRight - let flexbox handle the positioning
   }
 
   button {
     color: $our_beige;
     background-color: $our_brown;
   }
-
-
-  // &.button-replacement {
-  //   width: 30%; // Same as the button
-  //   text-align: center;
-  //   margin: 35%; // Centers the element
-  //   display: flex;
-  //   align-items: center;
-  //   justify-content: center;
-  //   font-size: 16px; 
-  //   font-weight: 300; 
-  // }
 }
