--- a/src/styles/views/ToDo.scss
+++ b/src/styles/views/ToDo.scss
@@ -35,32 +35,57 @@
   &.input {
     height: 35px;
     padding-left: 15px;
-    margin-left: -4px;
     border: none;
     border-radius: 0.75em;
-    margin-bottom: 20px;
     background: transparentize(white, 0.85);
     color: $our_brown;
+    flex: 0.95;
   }
   &.input-button-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
+  }
+  &.task-container {
+    display: flex;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    align-items: center; // Vertically center items
+    justify-content: space-between; // Pushes the button to the right
+  }
   &.label {
     color: $our_brown;
-    margin-bottom: 6px;
     text-transform: uppercase;
     font-weight: 600;
+  }
+  &.description {
+    color: $our_brown;
+    text-transform: lowercase;
+    padding-left: 10px;
+    margin-right: 15px;
+    margin-left: auto;
+    align-self: center;
   }
   &.button-container {
     display: flex;
     justify-content: center;
-    margin-top: 0.2em;
 
     button {
+      margin-right: 3px;
+      margin-left: 3px;
       color: $our_beige;
       background-color: $our_brown;
     }
+  }
+  .tick {
+    cursor: pointer; // Set cursor to pointer to indicate it's clickable
+    margin-left: 6px;
+    color: grey; // Initial color of the tick
+    font-size: 24px;
+    transition: color 0.3s; // Smooth transition for color change
+  }
+
+  .tick.clicked {
+    color: green; // Change color to green when clicked
   }
 }
