Added the option to filter tasks in MyTasks and MyApplications to only see tasks with a specific status

--- a/src/styles/views/MyApplications.scss
+++ b/src/styles/views/MyApplications.scss
@@ -106,4 +106,8 @@
       background-color: $our_brown;
     }
   }
+  & .filter {
+    color: $our_brown;
+    background-color: $our_beige;
+  }
 }
