--- a/src/styles/views/MyTasks.scss
+++ b/src/styles/views/MyTasks.scss
@@ -113,4 +113,9 @@
     color: $our_beige;
     background-color: $our_brown;
   }
+  & .filter {
+    color: $our_brown;
+    background-color: $our_beige;
+  }
+
 }
