Updated review overview for user and general bug fix
Improved user reviews to show details of each review and making possible to navigate through users
Solved too many calls to backend that resulted in server crash
Replaced href with links or navigate hook
Placeholders in UserProfile were updated
Logo fixed

--- a/src/styles/views/UserProfile.scss
+++ b/src/styles/views/UserProfile.scss
@@ -43,6 +43,27 @@
     transition: opacity 0.5s ease, transform 0.5s ease;
     box-shadow: $dropShadow;
     overflow-y: auto;
+
+
+    .reviewContainer {
+      display: flex;
+      flex-direction: column;
+      padding: 10px;
+      .reviewTitle {
+        font-weight: 600;
+        .reviewLinkToUser {
+          color: $our_brown;
+          text-decoration: none;
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+      }
+      &:not(:last-child) {
+        border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+      }
+    }
+
   }
 
   &.field {
