--- a/src/styles/views/HomeFeed.scss
+++ b/src/styles/views/HomeFeed.scss
@@ -8,6 +8,100 @@
   flex-direction: column;
 }
 
+.homefeed{
+  & .filter {
+    color: $our_brown;
+    background-color: $our_beige;
+    margin-right: 100px;
+  }
+
+  & .filter-container {
+    margin-bottom: 40px;
+    margin-right: 20px;
+  }
+
+  
+
+  &.slider {
+    
+    -webkit-appearance: none;
+    appearance: none;
+    margin-right: 4px;
+    outline:none;
+    overflow: hidden;
+    height: 11px; 
+    background: transparent; 
+    border-radius: 12px; 
+    border: 1px solid $our_brown;
+    
+    
+    
+    &::-webkit-slider-runnable-track {
+      width: 100%;
+      height: 8px;
+      border-radius: 12px; 
+    }
+
+    &::-moz-range-track {
+      width: 100%;
+      height: 8px;
+      background: #ddd;
+      border-radius: 5px;
+    }
+
+    &::-moz-range-progress {
+      background: $our_brown;
+      border-radius: 5px;
+    }
+
+    &::-ms-track {
+      width: 100%;
+      height: 8px;
+      background: #ddd;
+      border-radius: 5px;
+    }
+
+    &::-ms-fill-lower {
+      background: $our_brown;
+      border-radius: 5px;
+    }
+
+    
+    &::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      height: 11px;
+      width: 11px;
+      background-color: #fff;
+      border-radius: 50%;
+      border: 1px solid $our_brown ;
+      margin-top: -1.8px;
+      box-shadow: -407px 0 0 400px $our_brown;
+      cursor: pointer;
+    }
+
+    &::-moz-range-thumb {
+      height: 20px;
+      width: 20px;
+      border: none;
+      border-radius: 50%;
+      background: $our_brown;
+      cursor: pointer;
+    }
+
+    &::-ms-thumb {
+      height: 20px;
+      width: 20px;
+      border-radius: 50%;
+      background: $our_brown;
+      cursor: pointer;
+    }
+  }
+
+  }
+
+
+
 .myapplications {
 
   //General container
@@ -97,6 +191,7 @@
       background-color: $our_brown;
     }
   }
+
 }
 
 // .task {
