--- a/src/styles/views/ToDo.scss
+++ b/src/styles/views/ToDo.scss
@@ -66,6 +66,12 @@
     margin-left: auto;
     align-self: center;
   }
+  &.close_todo {
+    color: $our_brown;
+    padding-left: 10px;
+    margin-right: 15px;
+    align-self: center;
+  }
   &.button-container {
     display: flex;
     justify-content: center;
