* Making pages phone-friendly

--- a/src/styles/ui/NavBar.scss
+++ b/src/styles/ui/NavBar.scss
@@ -5,6 +5,7 @@
     justify-content: space-around;
     background-color: $our_green;
     padding: 10px 0;
+    font-size: calc(1vw + 10px);
     font-family: $fontDefault;
   }
   
