--- a/src/styles/views/HomeFeed.scss
+++ b/src/styles/views/HomeFeed.scss
@@ -161,7 +161,7 @@
     margin-bottom: 20px;
     color: $our_brown;
     text-transform: uppercase;
-    font-size: 30px;
+    font-size: calc(2vw + 13px);
     font-weight: 700;
     display: block;
     text-align: center; 
