--- a/src/styles/views/LeaveReview.scss
+++ b/src/styles/views/LeaveReview.scss
@@ -44,6 +44,8 @@
     margin-bottom: 6px;
     text-transform: uppercase;
     font-weight: 600;
+    width: 100%;
+    max-width: 100%;
   }
   &.button-container {
     display: flex;
