--- a/src/styles/views/MyProfile.scss
+++ b/src/styles/views/MyProfile.scss
@@ -33,6 +33,7 @@
   &.input {
     height: 35px;
     width: 410px;
+    width: 100%;
     padding-left: 15px;
     margin-left: -4px;
     border: none;
