--- a/src/styles/ui/Button.scss
+++ b/src/styles/ui/Button.scss
@@ -14,7 +14,7 @@
   padding: 6px;
   font-weight: 700;
   text-transform: uppercase;
-  font-size: 13px;
+  font-size: calc(0.7*(0.5vw + 13px));
   text-align: center;
   height: 35px;
   border: none;
