--- a/src/styles/views/Candidates.scss
+++ b/src/styles/views/Candidates.scss
@@ -18,7 +18,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 60%;
+    width: 100%;
     max-width: 70em;
     height: 12em;
     font-size: 16px;
@@ -56,7 +56,7 @@
   //Title, label and content define the type of text that is shown
   &.title {
     height: 45px;
-    width: 500px;
+    width: 100%;
     margin-top: 22px;
     margin-bottom: 20px;
     color: $our_brown;
@@ -65,6 +65,7 @@
     font-weight: 700;
     display: flex;
     justify-content: space-between;
+
   }
   &.label {
     color: $our_brown;
@@ -101,14 +102,17 @@
 
   //Regular button container
   &.button-container {
-    width: 80%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     margin-top: 2em;
     button {
       color: $our_beige;
       background-color: $our_brown;
-      width: 40%;
+      width: 45%;
+    white-space: nowrap; // Prevent text wrapping
+    overflow: hidden; // Hide overflowed text
+    text-overflow: ellipsis;
     }
   }
 }
