--- a/src/styles/views/Leaderboard.scss
+++ b/src/styles/views/Leaderboard.scss
@@ -16,7 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 60%;
+    width: 80%;
     max-width: 70em;
     font-size: 18px; 
     font-weight: 300;
@@ -34,13 +34,13 @@
     justify-content: space-between;
     background-color: $our_brown;
     color: white; 
-    width: 60%;
+    width: 80%;
     padding: 7px;
     max-width: 70em;
     margin: 0 auto;
     border-radius: 0.5em;
-    font-size: 18px; 
-    font-weight: bold; 
+    font-size: calc(0.5vw + 13px);
+    font-weight: bold;
     margin-bottom: 1em;
     margin-top: 1em;
   }
