--- a/src/styles/views/Register.scss
+++ b/src/styles/views/Register.scss
@@ -13,13 +13,14 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 60%;
+    width: auto;
     max-width: 30em;
-    height: 28em;
+    height: auto;
     font-size: 16px;
     font-weight: 300;
     padding-left: 37px;
     padding-right: 37px;
+    padding-top: 37px;
     border-radius: 0.75em;
     background-color: $our_green;
     transition: opacity 0.5s ease, transform 0.5s ease;
