--- a/src/styles/views/MyApplications.scss
+++ b/src/styles/views/MyApplications.scss
@@ -18,7 +18,7 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    max-width: 70em;
+    max-width: 100%;
     height: 22em;
     font-size: 16px;
     font-weight: 300;
